--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -75,8 +75,16 @@ properly displayed on mobile devices and not restricted to 20% */
   width: 100%;
 }
 
+/* Configurations for the start page
+------------------------------------ */
 .lead {
   font-size: 1.3em;
   font-weight: 300;
   margin-top: 18px;
 }
+
+.sd-p-4.startpage-grid {
+  padding-left: 6em !important;
+  padding-right: 6em !important;
+}
+/* ---------------------------------- */
