Make 'Vega-Altair' bold. Improve card grid layout for smaller screens

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -83,6 +83,11 @@ properly displayed on mobile devices and not restricted to 20% */
   margin-top: 18px;
 }
 
+.lead strong {
+  /* Default is bolder which is less */
+  font-weight: bold;
+}
+
 .sd-p-4.startpage-grid {
   padding-left: 6em !important;
   padding-right: 6em !important;
