--- a/doc/_static/theme_overrides.css
+++ b/doc/_static/theme_overrides.css
@@ -24,7 +24,7 @@ img.logo {
     width: 120px !important;
 }
 
-/* Increas max-width of the content area slightly to accomodate larger screens */
+/* Increase max-width of the content area slightly to accommodate larger screens */
 .bd-main .bd-content .bd-article-container {
     max-width: 1000px;
 }
